feat: implement embedded address for orders and refactor product service
- Add EnderecoPedido embeddable entity to store address directly in orders table
- Update Pedido entity to use embedded address instead of foreign key relationship
- Create database migration to add address columns and migrate existing data
- Add id field to EnderecoClienteRequest for address updates
- Update ClienteApplicationService to handle address updates in batch
- Refactor PedidoApplicationService to use embedded address
- Add new PedidoResponse factory method for embedded address
- Update JwtAuthenticationFilter to allow optional authentication on public endpoints
- Add @Setter annotation to Restaurante entity
- Remove v2 API endpoints from controllers
- Create comprehensive documentation for discount module, dashboard API, and frontend rules
- Add SQL scripts for database fixes and table recreation
- Implement security configuration updates for public endpoints
- Add support for updating cliente with address list